--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "vue": "^2.6.11",
-    "vue-loader": "^15.9.0",
-    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+    "vue-loader": "^15.9.0",
+    "vue-template-compiler": "^2.6.11"
   }
 }
