--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "build": "webpack --mode production --progress --hide-modules --watch"
+    "build": "webpack  --mode production --watch"
   },
   "keywords": [],
   "author": "",
