--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
   "dependencies": {
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
+    "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2",
     "sass-loader": "^8.0.2",
+    "socket.io": "^2.3.0",
+    "socketio-jwt": "^4.5.0",
     "style-loader": "^1.1.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-socket.io": "^3.0.7",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
