--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "build": "webpack  --mode production --watch --progress --hide-modules"
+    "build": "webpack  --mode production --watch --progress --hide-modules",
+    "server" : "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -30,7 +31,8 @@
     "vue-router": "^3.1.6",
     "vue-socket.io": "^3.0.7",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "devDependencies": {
     "less-loader": "^5.0.0",
