--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,8 @@
 JWT_TOKEN_KEY = thoaiky1992
 PORT = 5000
+ALLOW_ORIGIN_DOMAIN = http://localhost:3000
+
+DB_HOST = localhost
+DB_USER = root
+DB_PASSWORD = 
+DB_NAME = nodejs
