--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0",
     "socketio-jwt": "^4.5.0"
