--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack  --mode production --watch --progress --hide-modules",
+    "build": "webpack  --mode development --watch --progress --hide-modules",
     "server": "webpack-dev-server"
   },
   "keywords": [],
@@ -16,9 +16,17 @@
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
+    "file-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "toastr": "^2.1.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-socket.io": "^3.0.7",
