--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-socket.io": "^3.0.7",
+    "vuesax": "^3.11.13",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
